# documentation-helper

./: README.md  ingestion.py  main.py  pyproject.toml
backend/: core.py
docker/: Dockerfile  docker-compose.yml
